--- a/Makefile.devel
+++ b/Makefile.devel
@@ -1,17 +1,12 @@
-all: sources library all_samples
+all: sources library all_samples dcraw_binaries
 
 PP=./internal/preprocess.pl
 
-CC=clang
-CXX=clang++
-
-#CC=gcc
-#CXX=g++
-
+CC=gcc
+CXX=g++
 LDADD+=-lz
 
-CFLAGS=-DLIBRAW_USE_AUTOPTR
-CFLAGS+= -g -I. -pedantic -Wno-long-long -Wno-overflow -O3
+#CFLAGS=
 
 # RawSpeed Support
 # CFLAGS+=-DUSE_RAWSPEED -I../RawSpeed -I/opt/local/include/libxml2
@@ -23,15 +18,15 @@ CFLAGS+= -g -I. -pedantic -Wno-long-long -Wno-overflow -O3
 # LDADDD+=-L../dng_sdk/release -ldng -ljpeg -lz
 
 
-#CC=gcc
-#CXX=g++
+CC=gcc
+CXX=g++
 # CFLAGS+= -g -I. -pedantic  -Wno-long-long -Wno-overflow  -O4 -fopenmp
-# CFLAGS+= -g -I. -pedantic  -Wno-long-long -Wno-overflow  -O3
+CFLAGS+= -g -I. -pedantic  -Wno-long-long -Wno-overflow  -O3
 
 
 #CC=gcc
 #CXX=g++
-#CFLAGS+= -g -I. -pedantic  -Wno-long-long -Wno-overflow  -O2
+CFLAGS+= -g -I. -pedantic  -Wno-long-long -Wno-overflow  -O2
 # Haswell:
 #CFLAGS+=-march=core-avx2 -mtune=core-avx2 -mavx2
 
