Add patch to source

--- a/libraw.pc.in
+++ b/libraw.pc.in
@@ -5,7 +5,8 @@ includedir=@includedir@
 
 Name: libraw
 Description: Raw image decoder library (non-thread-safe)
-Requires: @PACKAGE_REQUIRES@
+Requires.private: @PACKAGE_REQUIRES@
 Version: @PACKAGE_VERSION@
-Libs: -L${libdir} -lraw -lstdc++@PC_OPENMP@
+Libs: -L${libdir} -lraw@PC_OPENMP@
+Libs.private: -lstdc++
 Cflags: -I${includedir}/libraw
