update names for built lib file

--- a/Makefile.static.linux
+++ b/Makefile.static.linux
@@ -86,9 +86,9 @@ LR_INCLUDES=libraw/libraw.h libraw/libraw_alloc.h \
   libraw/libraw_version.h
 
 library: ${LIB_OBJECTS}
-	rm -f lib/libraw_mod.a
-	ar crv lib/libraw_mod.a ${LIB_OBJECTS}
-	ranlib lib/libraw_mod.a
+	rm -f lib/libraw_mod.linux.a
+	ar crv lib/libraw_mod.linux.a ${LIB_OBJECTS}
+	ranlib lib/libraw_mod.linux.a
 
 ## RawSpeed xml file
 
