compile thread safe libraw for unix system

--- a/Makefile.static.linux
+++ b/Makefile.static.linux
@@ -85,9 +85,9 @@ LR_INCLUDES=libraw/libraw.h libraw/libraw_alloc.h \
   libraw/libraw_internal.h libraw/libraw_types.h \
   libraw/libraw_version.h
 
-library: ${LIB_OBJECTS}
+library: ${LIB_MT_OBJECTS}
 	rm -f lib/libraw_mod.linux.a
-	ar crv lib/libraw_mod.linux.a ${LIB_OBJECTS}
+	ar crv lib/libraw_mod.linux.a ${LIB_MT_OBJECTS}
 	ranlib lib/libraw_mod.linux.a
 
 ## RawSpeed xml file
