--- a/Makefile.static.macos
+++ b/Makefile.static.macos
@@ -3,7 +3,7 @@ all: library
 CXX=clang++
 
 CFLAGS=-I.
-CFLAGS+=-arch x86_64 -arch arm64
+CFLAGS+=-arch x86_64 -arch arm64 -mmacosx-version-min=10.12
 CFLAGS+=-Ofast -funroll-loops
 #CFLAGS+=-Wall -Wextra -pedantic
 
